--- a/css/estilos.css
+++ b/css/estilos.css
@@ -71,40 +71,12 @@ li:hover {
 
 /* Comienzo de Portada <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 
-.portada { grid-area: portada;
-  background: url(../img/portada2.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right;
-  height: 60vh;
-  color: #240214ec;
-  width: 100vw;
-
+#portada{
+  width: 1350px;
 }
 
 #texto{
-  margin-left: 150px;
   width: 700px;
-}
-
-.btn{
-  margin-top: 20px;
-  width: 150px;
-  height: 40px;
-  background-color: #ffff;
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-  cursor: pointer;
-  justify-content: space-between;
-  transition: .3s ease all;
-  border-radius: 5px;
-  float: left;
-}
-
-.btn:hover {
-  left: 20px;
-  background-color: #d9fcff;
-  transform: scale(1.1)
 }
 
 @media (max-width:980px){
@@ -257,12 +229,17 @@ li:hover {
   padding-top: 50px;
   display: flex;
   justify-content: center;
+  height: 600px;
 }
 
 .contacto form{
   background-color: #ffffff;
   width: 600px;
-  height: 330px;
+  height: 500px;
+}
+
+.fieldset{
+  margin-left: 15px;
 }
 
 .contacto2 { 
