--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,28 +1,21 @@
-.body{
+@charset "UTF-8";
+.body {
   background-image: linear-gradient(to top, #ace0f9 0%, #fff1eb 100%);
   font-family: sans-serif;
   margin: 0px;
 }
 
-.container {  display: grid;
+.container {
+  display: grid;
   grid-template-columns: 0fr;
   grid-template-rows: 0fr 0fr 0fr 0fr 0fr 0fr 0fr 0fr;
   gap: 0px 0px;
   grid-column-gap: 0px;
   grid-auto-flow: row;
-  grid-template-areas:
-    "header"
-    "portada"
-    "nosotros"
-    "nosotros2"
-    "productos"
-    "contacto"
-    "contacto2"
-    "footer";
+  grid-template-areas: "header" "portada" "nosotros" "nosotros2" "productos" "contacto" "contacto2" "footer";
 }
 
 /* Header (Logo + Título + Nav) <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
 .header {
   grid-area: header;
   display: flex;
@@ -31,14 +24,14 @@
   background-color: #FFFFFF;
   align-items: center;
   padding: 10px;
-  box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
 }
 
-.logo img{
+.logo img {
   height: 75px;
 }
 
-li{
+li {
   top: 0;
   list-style: none;
   display: inline-block;
@@ -49,7 +42,7 @@ li{
 li a {
   text-decoration: none;
   list-style: none;
-  color: #240214ec;
+  color: rgba(36, 2, 20, 0.9254901961);
   font-size: 1.2rem;
 }
 
@@ -59,53 +52,51 @@ li:hover {
   align-items: center;
 }
 
-@media (max-width:980px){
-  .header{
+@media (max-width: 980px) {
+  .header {
     flex-direction: column;
     height: 230px;
   }
-  nav{
+
+  nav {
     padding: 10px 0px;
   }
 }
-
 /* Comienzo de Portada <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
-#portada{
+#portada {
   width: 1350px;
 }
 
-#texto{
+#texto {
   width: 700px;
 }
 
-@media (max-width:980px){
-  #texto{
+@media (max-width: 980px) {
+  #texto {
     margin-left: 150px;
     width: 500px;
   }
+
   .portada {
     width: 100%;
     max-height: 800px;
   }
 }
-
 /* Comienzo de Contenido Nosotros <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
-.nosotros { 
+.nosotros {
   grid-area: nosotros;
-  background:#e2e7eb;
+  background: #e2e7eb;
   justify-content: space-between;
   display: flex;
   border-bottom: 1px solid #c7dbdd;
 }
 
-#contenido{
+#contenido {
   width: 50%;
   margin-left: 150px;
 }
 
-#description-row{
+#description-row {
   background-image: url(../img/hombre2.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -113,74 +104,75 @@ li:hover {
   padding-right: 50px;
 }
 
-
-.nosotros2 { 
+.nosotros2 {
   grid-area: nosotros2;
   height: 200px;
   background-color: #FFFFFF;
-  box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
 }
 
-#valores{
+#valores {
   display: flex;
   justify-content: space-around;
   text-align: center;
 }
 
-#icon{
+#icon {
   height: 100px;
   width: 100px;
 }
 
-#description-box{
+#description-box {
   margin-top: 30px;
   align-content: center;
 }
 
-@media (max-width: 980px){
-  .nosotros2 { 
+@media (max-width: 980px) {
+  .nosotros2 {
     height: 1100px;
   }
-  #valores{
+
+  #valores {
     flex-direction: column;
   }
-  #description-row{
+
+  #description-row {
     height: 700px;
     width: 400px;
   }
-  #contenido{
+
+  #contenido {
     margin-left: 100px;
   }
-  #icon{
+
+  #icon {
     height: 250px;
     width: 250px;
   }
 }
-
 /* Comienzo de Sección Productos <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
-.productos { 
+.productos {
   grid-area: productos;
   border-top: 1px solid #c7dbdd;
   padding-top: 15px;
 }
 
-#titulo-productos{
+#titulo-productos {
   margin-left: 80px;
 }
 
-#productos-fila{
+#productos-fila {
   display: flex;
   justify-content: space-around;
   text-align: center;
   align-content: center;
 }
 
-#productos-columna{
+#productos-columna {
   text-align: center;
   max-width: 150px;
   border-radius: 8px;
-  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
   background-color: #FFFFFF;
   transition: all 0.25s;
@@ -188,35 +180,36 @@ li:hover {
   padding-bottom: 10px;
   margin: 10px;
 }
-#productos-columna img{
+
+#productos-columna img {
   width: 150px;
   height: 150px;
 }
 
-#productos-columna:hover{
+#productos-columna:hover {
   transform: scale(1.1);
 }
 
-@media (max-width: 980px){
-  #productos-fila{
+@media (max-width: 980px) {
+  #productos-fila {
     flex-direction: column;
     align-items: center;
   }
-  #productos-columna img{
+
+  #productos-columna img {
     width: 300px;
     height: 300px;
     border: solid black 1px;
     text-align: center;
   }
-  #productos-columna{
+
+  #productos-columna {
     max-width: 300px;
     margin: 20px;
   }
 }
-
 /* Comienzo de Sección Contacto <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
-.contacto { 
+.contacto {
   grid-area: contacto;
   background: url(../img/contacto.jpg);
   background-repeat: no-repeat;
@@ -225,26 +218,26 @@ li:hover {
   border-bottom: 1px solid #c7dbdd;
   border-top: 1px solid #c7dbdd;
   height: 60vh;
-  color: #240214ec;
+  color: rgba(36, 2, 20, 0.9254901961);
   padding-top: 50px;
   display: flex;
   justify-content: center;
   height: 600px;
 }
 
-.contacto form{
-  background-color: #ffffff;
+.contacto form {
+  background-color: #FFFFFF;
   width: 600px;
   height: 500px;
 }
 
-.fieldset{
+.fieldset {
   margin-left: 15px;
 }
 
-.contacto2 { 
+.contacto2 {
   grid-area: contacto2;
-  background:#e2e7eb;
+  background: #e2e7eb;
   border-bottom: 1px solid #c7dbdd;
 }
 
@@ -258,36 +251,33 @@ li:hover {
 }
 
 #zonatit {
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   width: 280px;
-  height: 60px;
+  height: 70px;
   text-align: center;
   float: right;
   border: solid 1px black;
   margin-bottom: 30px;
 }
 
-#barrios{
+#barrios {
   text-align: right;
   font-size: 15px;
 }
 
-@media (max-width: 980px){
-  .contacto { 
+@media (max-width: 980px) {
+  .contacto {
     max-height: 400px;
   }
-  #barrios{
+
+  #barrios {
     font-size: 8px;
   }
 }
-
 /* Comienzo de Footer <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-
-.footer { 
+.footer {
   grid-area: footer;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   display: flex;
   justify-content: space-between;
-}
-
-
+}/*# sourceMappingURL=estilos.css.map */
