--- a/css/estilos.css
+++ b/css/estilos.css
@@ -170,7 +170,7 @@ li:hover {
 
 #productos-columna {
   text-align: center;
-  max-width: 150px;
+  width: 250px;
   border-radius: 8px;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -179,6 +179,7 @@ li:hover {
   border: solid black 1px;
   padding-bottom: 10px;
   margin: 10px;
+  vertical-align: baseline;
 }
 
 #productos-columna img {
@@ -188,6 +189,25 @@ li:hover {
 
 #productos-columna:hover {
   transform: scale(1.1);
+  background-color: #d9fcff;
+}
+
+.btn-primary, .btn-secondary {
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 500;
+  font-size: 15px;
+  color: #ffffff;
+  background-color: #1883ba;
+  border-radius: 6px;
+  border: 2px solid #0016b0;
+  float: inline-end;
+}
+
+.btn-primary:hover, .btn-secondary:hover {
+  color: #1883ba;
+  background-color: #ffffff;
+  cursor: pointer;
 }
 
 @media (max-width: 980px) {
