--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -1,4 +1,17 @@
-$cblanco: #FFFFFF;
+$colores: (
+  back: #FFFFFF,
+  hover: #d9fcff,
+  font: #240214ec,
+);
+
+$background: map-get($map: $colores, $key: back);
+$hover: map-get($map: $colores, $key: hover);
+$font: map-get($map: $colores, $key: font);
+
+@mixin sizes($width,$heigh) {
+  height: $heigh;
+  width: $width;
+}
 
 .body{
     background-image: linear-gradient(to top, #ace0f9 0%, #fff1eb 100%);
@@ -30,7 +43,7 @@ $cblanco: #FFFFFF;
     display: flex;
     justify-content: space-between;
     height: 75px;
-    background-color: $cblanco;
+    background-color: $background;
     align-items: center;
     padding: 10px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
@@ -51,12 +64,12 @@ $cblanco: #FFFFFF;
   li a {
     text-decoration: none;
     list-style: none;
-    color: #240214ec;
+    color: $font;
     font-size: 1.2rem;
   }
   
   li:hover {
-    background-color: #d9fcff;
+    background-color: $hover;
     transition: 0.6s;
     align-items: center;
   }
@@ -119,7 +132,7 @@ $cblanco: #FFFFFF;
   .nosotros2 { 
     grid-area: nosotros2;
     height: 200px;
-    background-color: $cblanco;
+    background-color: $background;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.4);
   }
   
@@ -130,8 +143,7 @@ $cblanco: #FFFFFF;
   }
   
   #icon{
-    height: 100px;
-    width: 100px;
+    @include sizes(100px,100px)
   }
   
   #description-box{
@@ -147,15 +159,13 @@ $cblanco: #FFFFFF;
       flex-direction: column;
     }
     #description-row{
-      height: 700px;
-      width: 400px;
+      @include sizes(700px,400px)
     }
     #contenido{
       margin-left: 100px;
     }
     #icon{
-      height: 250px;
-      width: 250px;
+      @include sizes(250px,250px)
     }
   }
   
@@ -180,33 +190,55 @@ $cblanco: #FFFFFF;
   
   #productos-columna{
     text-align: center;
-    max-width: 150px;
+    width: 250px;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(0,0,0,0.2);
     overflow: hidden;
-    background-color: $cblanco;
+    background-color: $background;
     transition: all 0.25s;
     border: solid black 1px;
     padding-bottom: 10px;
     margin: 10px;
+    vertical-align: baseline;
   }
   #productos-columna img{
-    width: 150px;
-    height: 150px;
+    @include sizes(150px,150px)
   }
   
   #productos-columna:hover{
     transform: scale(1.1);
+    background-color: $hover;
   }
   
+  .btn-primary {
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+    float: inline-end;
+  }
+
+  .btn-primary:hover{
+    color: #1883ba;
+    background-color: #ffffff;
+    cursor: pointer;
+  }
+
+  .btn-secondary {
+    @extend .btn-primary;
+  }
+
   @media (max-width: 980px){
     #productos-fila{
       flex-direction: column;
       align-items: center;
     }
     #productos-columna img{
-      width: 300px;
-      height: 300px;
+      @include sizes(300px,300px);
       border: solid black 1px;
       text-align: center;
     }
@@ -235,9 +267,8 @@ $cblanco: #FFFFFF;
   }
   
   .contacto form{
-    background-color: $cblanco;
-    width: 600px;
-    height: 500px;
+    background-color: $background;
+    @include sizes(600px,500px)
   }
   
   .fieldset{
@@ -260,7 +291,7 @@ $cblanco: #FFFFFF;
   }
   
   #zonatit {
-    background-color: $cblanco;
+    background-color: $background;
     width: 280px;
     height: 70px;
     text-align: center;
@@ -287,7 +318,7 @@ $cblanco: #FFFFFF;
   
   .footer { 
     grid-area: footer;
-    background-color: $cblanco;
+    background-color: $background;
     display: flex;
     justify-content: space-between;
   }
