--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,12 @@
 @charset "UTF-8";
 .body {
-  background-image: linear-gradient(to top, #ace0f9 0%, #fff1eb 100%);
+  background-color: #FFFFFF;
   font-family: sans-serif;
   margin: 0px;
+}
+
+:root{
+  scroll-behavior: smooth;
 }
 
 .container {
@@ -24,7 +28,7 @@
   background-color: #FFFFFF;
   align-items: center;
   padding: 10px;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px -1px 10px rgba(0, 0, 0, 0.4);
 }
 
 .logo img {
@@ -52,19 +56,30 @@ li:hover {
   align-items: center;
 }
 
-@media (max-width: 980px) {
-  .header {
-    flex-direction: column;
-    height: 230px;
-  }
-
-  nav {
-    padding: 10px 0px;
-  }
-}
 /* Comienzo de Portada <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 #portada {
   width: 1350px;
+  height: 600px;
+  background-image: linear-gradient(to left, rgba(255, 241, 235, 0.5) 0%, rgba(172, 225, 249, 0.5) 100%), url(../img/portada2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #000000;
+  font-family: 'Allura', cursive;
+}
+
+#portada h1 {
+  font-size: 6rem;
+}
+
+#portada p {
+  font-size: 3rem;
 }
 
 #texto {
@@ -72,28 +87,30 @@ li:hover {
 }
 
 @media (max-width: 980px) {
-  #texto {
-    margin-left: 150px;
-    width: 500px;
+  #portada h1 {
+    font-size: 5rem;
   }
-
-  .portada {
+  #portada{
     width: 100%;
-    max-height: 800px;
   }
+}
+
+@media (max-width: 380px) {
+
 }
 /* Comienzo de Contenido Nosotros <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 .nosotros {
   grid-area: nosotros;
-  background: #e2e7eb;
-  justify-content: space-between;
+  background: #f5f8fa;
   display: flex;
-  border-bottom: 1px solid #c7dbdd;
+  justify-content: space-around;
+  height: 600px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
 }
 
 #contenido {
-  width: 50%;
-  margin-left: 150px;
+  width: 620px;
+  margin-left: 50px;
 }
 
 #description-row {
@@ -102,13 +119,14 @@ li:hover {
   background-size: cover;
   background-position: center;
   padding-right: 50px;
+  margin-left: 20px;
 }
 
 .nosotros2 {
   grid-area: nosotros2;
   height: 200px;
   background-color: #FFFFFF;
-  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
 }
 
 #valores {
@@ -128,32 +146,46 @@ li:hover {
 }
 
 @media (max-width: 980px) {
-  .nosotros2 {
-    height: 1100px;
+  .nosotros{
+    height: 1300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-
+  #contenido {
+    margin-left: 20px;
+    font-size: x-large;
+    width: 100%;
+    text-align: center;
+  }
+  .nosotros2{
+    height: 1300px;
+  }
   #valores {
     flex-direction: column;
   }
-
   #description-row {
     height: 700px;
     width: 400px;
+    text-align: center;
+    padding-right: 0px;
+    margin-left: 0px;
+    font-size: xx-large;
   }
-
-  #contenido {
-    margin-left: 100px;
+  #description-box h4{
+    font-size: xx-large;
   }
-
   #icon {
-    height: 250px;
-    width: 250px;
+    margin-bottom: 10px;
+    height: 300px;
+    width: 300px;
   }
 }
 /* Comienzo de Sección Productos <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 .productos {
   grid-area: productos;
-  border-top: 1px solid #c7dbdd;
+  background-color: #f5f8fa;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
   padding-top: 15px;
 }
 
@@ -214,11 +246,12 @@ li:hover {
   #productos-fila {
     flex-direction: column;
     align-items: center;
+    font-size: xx-large;
   }
 
   #productos-columna img {
-    width: 300px;
-    height: 300px;
+    width: 230px;
+    height: 200px;
     border: solid black 1px;
     text-align: center;
   }
@@ -243,10 +276,12 @@ li:hover {
   display: flex;
   justify-content: center;
   height: 600px;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
 .contacto form {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
+  border: solid 1px grey;
   width: 600px;
   height: 500px;
 }
@@ -259,6 +294,7 @@ li:hover {
   grid-area: contacto2;
   background: #e2e7eb;
   border-bottom: 1px solid #c7dbdd;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
 }
 
 #zona {
@@ -271,27 +307,41 @@ li:hover {
 }
 
 #zonatit {
-  background-color: #FFFFFF;
+  background-color: #f5f8fa;
   width: 280px;
   height: 70px;
   text-align: center;
   float: right;
-  border: solid 1px black;
+  border: solid 1px grey;
   margin-bottom: 30px;
 }
 
 #barrios {
-  text-align: right;
+  background-color: #f5f8fa;
   font-size: 15px;
+}
+
+#barrios p{
+  text-align: left;
+  margin-left: 6px;
+  margin-bottom: 0px;
 }
 
 @media (max-width: 980px) {
   .contacto {
-    max-height: 400px;
+    height: 700px;
+    font-size: large;
+    padding-top: 25px;
   }
-
+  .contacto form {
+    height: 650px;
+    width: 500px;
+  }
+  #zonatit {
+    font-size: xx-large
+  }
   #barrios {
-    font-size: 8px;
+    font-size: xx-large
   }
 }
 /* Comienzo de Footer <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
@@ -299,5 +349,16 @@ li:hover {
   grid-area: footer;
   background-color: #FFFFFF;
   display: flex;
-  justify-content: space-between;
-}/*# sourceMappingURL=estilos.css.map */
+  justify-content: space-around;
+  align-items: center;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+}
+
+@media (max-width: 980px) {
+  .redesfooter {
+    font-size: small;
+  }
+  .contactofooter {
+    font-size: small;
+  }
+}
