--- a/css/estilos.css
+++ b/css/estilos.css
@@ -90,8 +90,21 @@ li:hover {
   #portada h1 {
     font-size: 5rem;
   }
+  #portada {
+    width: 800px;
+    background-position: right;
+    background-size: cover;
+  }
+}
+
+@media (max-width: 400px) {
+  #portada h1 {
+    font-size: 10rem;
+  }
   #portada{
-    width: 100%;
+    width: 300px;
+    height: 200px;
+    background-size: contain;
   }
 }
 
